[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
repository = "https://github.com/azureqaq/gpio-cdev-async"
homepage = "https://github.com/azureqaq/gpio-cdev-async"


[workspace.lints.rust]
unreachable_pub = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unused = "allow"              # dev


[workspace]
resolver = "2"
members = ["lib_uapi"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
