[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
repository = "https://github.com/azureqaq/gpio-cdev-async"
homepage = "https://github.com/azureqaq/gpio-cdev-async"


[workspace.lints.rust]
unreachable_pub = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"


[workspace]
resolver = "2"
members = ["gpio_cdev_async"]
