[package]
name = "gpio_cdev_async"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
libc = "0.2"
bitflags = "2"
thiserror = "1"
tinyvec = { version = "1", features = ["alloc", "rustc_1_57"], optional = true }
nix = { version = "0.28", features = ["ioctl"] }

[lints]
workspace = true

[features]
default = ["v1"]
# default = ["v2"]
v1 = []
v2 = ["dep:tinyvec"]
