[package]
name = "gpio_cdev_async"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
libc = "0.2"
bitflags = "2"
thiserror = "2"
nix = { version = "0.30", features = ["ioctl"] }

[lints]
workspace = true

[features]
default = ["v1"]
# default = ["v2"]
v1 = []
v2 = []
